# soroban-contract-transfers

./: .gitignore  Cargo.toml  deno.json
contracts/auth-bypass/: cargo.toml
contracts/auth-bypass/src/: lib.rs
contracts/bulk-transfer/: Cargo.toml
contracts/bulk-transfer/src/: contract.rs
typescript/src/: invoke-c-to-g.ts  invoke-c.ts  invoke-g.ts  setup.ts
typescript/src/config/: env.ts  types.ts
typescript/src/utils/: bump-cpu-plugin.ts  custom-signer.ts  io.ts  load-wasm.ts
