[workspace]
resolver = "2"

members = [
    "contracts/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fazzatti/forwarder-example"

[workspace.dependencies]
# Using a git branch of rs-soroban-sdk for testing muxedaddress-fromstr
soroban-sdk = "23.4.0"
stellar-contract-utils ="=0.5.0"
stellar-macros ="=0.5.0"



[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
